Giraph Change Log

Release 1.1.0 - unreleased
  GIRAPH-935: Loosen modifiers when needed (ikabiljo via majakabiljo)

  GIRAPH-937 - Upgrade Hive I/O to 0.26. (aching)

  GIRAPH-893: Implement preLoad & postSave on workerObservers (pavanka)

  GIRAPH-936: AsyncMessageStoreWrapper threads are not daemonized (edunov via majakabiljo)

  GIRAPH-934: Allow having state in aggregators (ikabiljo via majakabiljo)

  GIRAPH-932: Adding .arcconfig to GIRAPH for Arcanist support (aching)

  GIRAPH-927: Decouple netty server threads from message processing (edunov via pavanka)  

  GIRAPH-924: Fix checkpointing (edunov via majakabiljo)

  GIRAPH-921: Create ByteValueVertex to store vertex values as bytes without object instance (akyrola via majakabiljo)

  GIRAPH-929: setIfUnset for EnumConfOption (pavanka)  

  GIRAPH-912: Support succinct representation of messages in messagestores (pavanka)

  GIRAPH-903: Detect crashes of Netty threads (edunov via pavanka)

  GIRAPH-925: Unit tests should pass even if zookeeper port not available (edunov via pavanka)

  GIRAPH-713: Provide an option to do request compression (pavanka)

  GIRAPH-923: Upgrade Netty version to a latest stable one (pavanka)

  GIRAPH-916: Wrong number of vertices stored reported to command line (majakabiljo)

  GIRAPH-919: Add worker to worker communication (majakabiljo)

  GIRAPH-922: SimpleEdgeStore has a bug causing NPE (pavanka)

  GIRAPH-915: With BigDataIO some messages can get ignored (majakabiljo via pavanka)

  GIRAPH-918: GIRAPH-908 has a small bug reg counting entries (pavanka)

  GIRAPH-842: option to dump histogram of memory usage when heap is low on memory (pavanka)

  GIRAPH-904: Giraph can hang when hostnames include uppercase letters (netj via pavanka)

  GIRAPH-900: Remove timers for compute method (majakabiljo via pavanka)

  GIRAPH-894: make giraphconfiguration available to workercontext (pavanka)

  GIRAPH-910: removing unnecessary boxing in some places in giraph-core (pavanka)  
